# legaldata

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  resultado_felipeabrahap_20260708124014.xlsx
src/legaldata/: __init__.py  cli.py  dashboard.py  datajud.py  djen.py  helpers.py  parser.py  storage.py  tribunais.toml  xlsx.py
