[project]
name = "legaldata"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.26",
    "rich>=15.0",
    "httpx>=0.28",
    "duckdb>=1.5.4",
    "openpyxl>=3.1",
]

[project.scripts]
legaldata = "legaldata.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legaldata"]
artifacts = ["src/legaldata/tribunais.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
